<resources>
    <string name="app_name">Meu Lanche</string>
    <string name="app_splash_screen">Tela de abertura do aplicativo</string>
    <string name="main_image">Imagem principal</string>
    <string name="keep_connected">Manter conectado</string>
    <string name="login">Entrar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="click_here">Clique aqui</string>
    <string name="create_account">Criar conta</string>
    <string name="phone">Telefone</string>
    <string name="password">Senha</string>
    <string name="my_snack">Meu Lanche</string>
    <string name="name">Nome</string>
    <string name="register">Cadastrar</string>
    <string name="image_establishment">Imagem do estabelecimento</string>
    <string name="name_establishment">Nome do Estabelecimento</string>
    <string name="category">Categoria</string>
    <string name="preparation_time">Tempo de preparo</string>
    <string name="delivery_rate">Taxa de Entrega</string>
    <string name="cafeteria">Lanchonete</string>
    <string name="pizzeria">Pizzaria</string>
    <string name="restaurant_and_steakhouse">Restaurante e Churrascaria</string>
    <string name="acai_iceScream">Açaí/Sorvete</string>
    <string name="water_gas">Água/Gás</string>
    <string name="others">Outros</string>
    <string name="from_15_to_25_minutes">15-25 min</string>
    <string name="from_20_to_30_minutes">20-30 min</string>
    <string name="from_30_to_40_minutes">30-40 min</string>
    <string name="we_dont_deliver">Não fazemos entrega</string>
    <string name="free">Grátis</string>
    <string name="from_2_to_4_money">R$ 2,00 a 4,00</string>
    <string name="from_4_to_8_money">R$ 4,00 a 8,00</string>
    <string name="home">Home</string>
    <string name="search_establishment_or_product">Buscar Estabelecimento ou Produto</string>
    <string name="open">Aberto</string>
    <string name="establishment">Hamburgueria</string>
    <string name="category_establishment">Hamburgueria, Pizzaria</string>
    <string name="search_by_product">Buscar por Produto</string>
    <string name="image_product">Imagem do produto</string>
    <string name="product">Americano</string>
    <string name="description_product">Pão de forma, 2 ovos, queijo, presunto, tomate, alface</string>
    <string name="price_product">A partir de R$ 10,00</string>
    <string name="profile">Perfil</string>
    <string name="personal_data">Dados Pessoais</string>
    <string name="change_password">Alterar Senha</string>
    <string name="delete_account">Excluir conta</string>
    <string name="log_off">Sair</string>
    <string name="insert_product">Inserir Produto</string>
    <string name="name_product">Nome</string>
    <string name="description">Descrição</string>
    <string name="price">Preço</string>
    <string name="image">Imagem do produto</string>
    <string name="continue_purchase">Continuar</string>
    <string name="if_desired_enter_any_remarks">Se desejar, digite alguma observação</string>
    <string name="order">Pedido</string>
    <string name="do_you_want_to_finalize_your_order">Deseja finalizar o seu pedido?</string>
    <string name="proceed_to_payment">Prosseguir para o pagamento</string>
    <string name="keep_buying">Continuar comprando</string>
    <string name="close">Fechar</string>
</resources>