<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    tools:context=".presentation.fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/DefaultStyleText"
                android:id="@+id/tv_personal_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_data" />

            <TextView
                style="@style/DefaultStyleText"
                android:id="@+id/tv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password" />

            <TextView
                style="@style/DefaultStyleText"
                android:id="@+id/tv_delete_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_account" />

            <TextView
                style="@style/DefaultStyleText"
                android:id="@+id/tv_log_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_off" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>